<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd
http://www.w3.org/2001/XMLSchema-instance ">

    <modelVersion>4.0.0</modelVersion>

    <prerequisites>
        <maven>3.0.5</maven>
    </prerequisites>

    <!-- ====================== -->
    <!-- Project description    -->
    <!-- ====================== -->

    <inceptionYear>2015</inceptionYear>

    <groupId>com.zlatozar.java-project</groupId>
    <artifactId>java-project</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>Fun Iterations</name>

    <url>http://java-fun.xxxx.com</url>

    <description>
        The task definition is given in NOTES.
    </description>

    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <project.junit.version>4.11</project.junit.version>
        <project.jsr305.version>1.3.9</project.jsr305.version>
        <project.java-project.version>1.0-SNAPSHOT</project.java-project.version>
    </properties>

    <!-- ====================== -->
    <!-- Project settings       -->
    <!-- ====================== -->

    <scm>
        <connection>scm:git:https://xxxxxxxx/</connection>
        <developerConnection>scm:git:https://xxxxxxx/</developerConnection>
        <url>http://xxxxxxxx/source/browse/</url>
    </scm>

    <developers>
        <developer>
            <id>zlatozar</id>
            <name>Zlatozar Zhelyazkov</name>
            <email>zlatozar@gmail.com</email>
            <organization>XXXX</organization>
            <timezone>2</timezone>
        </developer>
    </developers>

    <!-- ================================= -->
    <!-- PLUGINS                           -->
    <!-- ================================= -->

    <build>
        <!-- This is the parent, so only define pluginManagement, not plugins -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>findbugs-maven-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- Compilation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- Unit tests -->
            <plugin>
                <!-- To debug JUnit tests from IDE please run like this:
                mvn -Dmaven.surefire.debug="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000 -Xnoagent -Djava.compiler=NONE" test
                -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.3</version>
                <configuration>
                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m -Dfile.encoding=utf-8</argLine>
                    <!-- Run only tests that are not annotated or annotated with @UnitTest.

                         NOTE: To see how test are collected (find which are disabled)
                               see src/test/java/com/suites/util/ClasspathClassesFinder.java -->
                    <includes>
                        <include>**/RunAllUnitTests.java</include>
                    </includes>
                </configuration>
            </plugin>

            <!-- Static analysers -->
            <plugin>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <consoleOutput>true</consoleOutput>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <configuration>
                    <excludeFilterFile>${basedir}/findbugs-exclude.xml</excludeFilterFile>
                    <!-- It will be quick if you set it to Low -->
                    <effort>Max</effort>

                    <!-- Reports all bugs (other values are medium and max) -->
                    <threshold>Low</threshold>

                    <!-- Produces XML report -->
                    <xmlOutput>true</xmlOutput>
                </configuration>
            </plugin>


            <!-- Distribution -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <finalName>${project.artifactId}-${project.version}-src</finalName>
                    <archive>
                        <manifest>
                            <mainClass>${project.groupId}.AddLater</mainClass>
                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <id>make-my-jar-with-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <finalName>${project.artifactId}-${project.version}</finalName>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>${project.groupId}.AddLater</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!-- Documentation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.1</version>
                <configuration>
                    <outputDirectory>${project.basedir}</outputDirectory>
                    <reportOutputDirectory>${project.basedir}</reportOutputDirectory>
                    <destDir>docs</destDir>
                </configuration>
            </plugin>
        </plugins>

    </build>
    <profiles>
        <profile>
            <!-- This profile is used to run all unit and integration test -->
            <id>integrator</id>
            <activation>
                <property>
                    <name>integrator</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.18</version>
                        <configuration>
                            <argLine>-server -XX:+AggressiveOpts -XX:+UseParNewGC
                                -XX:+UseConcMarkSweepGC -XX:NewRatio=3 -Xms512m -Xmx1024m
                                -XX:MaxPermSize=512m -Dfile.encoding=utf-8 -Dlog.level=SEVERE
                            </argLine>
                            <!-- Run all tests -->
                            <includes>
                                <include>**/RunAllUnitTests.java</include>
                                <!-- Integration test are tests are annotated with @IntegrationTest -->
                                <include>**/RunAllIntegrationTests.java</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <!-- ================================= -->
    <!-- DEPENDENCIES(versions up to date) -->
    <!-- ================================= -->

    <!-- 3rd party dependencies available from the public repository -->

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${project.junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>${project.jsr305.version}</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-jsonSchema</artifactId>
            <version>2.5.0</version>
        </dependency>

    </dependencies>

</project>
